5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1724_2527.log
== TEST (2019-05-14 11:06:50) 
-- CODE:
x = int(input("Escreva um numero inteiro:"))

d = 1 
c = 0
d1 = 0

while(d <= x):
	y = x % d
	if(y == 0):
		print(d)
		d1 = d1 + d
d = d+1
if d1==x:
	print("PERFEITO")
elif:
	print("NAO PERFEITO")
-- ERROR:
File "XXXX", line 15
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:03) 
-- CODE:
x = int(input("Escreva um numero inteiro:"))

d = 1 
c = 0
d1 = 0

while(d <= x):
	y = x % d
	if(y == 0):
		print(d)
		d1 = d1 + d
d = d+1
if d1==x:
	print("PERFEITO")
	elif:
	print("NAO PERFEITO")
-- ERROR:
File "XXXX", line 15
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:22) 
-- CODE:
x = int(input("Escreva um numero inteiro:"))

d = 1 
c = 0
d1 = 0

while(d <= x):
	y = x % d
	if(y == 0):
		print(d)
		d1 = d1 + d
d = d+1
if d1==x:
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:02) 
-- CODE:
x = int(input("Escreva um numero inteiro:"))

d = 1 
c = 0
d1 = 0

while(d < x):
	y = x % d
	if(y == 0):
		print(d)
		d1 = d1 + d
	d = d+1
if d1==x:
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:08) 
-- CODE:
x = int(input("Escreva um numero inteiro:"))

d = 1 
c = 0
d1 = 0

while(d < x):
	y = x % d
	if(y == 0):
		print(d)
		d1 = d1 + d
	d = d+1
if d1==x:
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.393429
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
